// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tokenizer > PSL fragments > snapshot: @relation with named arguments 1`] = `
"At             "@"
Ident          "relation"
LParen         "("
Ident          "fields"
Colon          ":"
Whitespace     " "
LBracket       "["
Ident          "userId"
RBracket       "]"
Comma          ","
Whitespace     " "
Ident          "references"
Colon          ":"
Whitespace     " "
LBracket       "["
Ident          "id"
RBracket       "]"
RParen         ")"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: astral unicode identifiers 1`] = `
"Ident          "𐐀𐐁"
Whitespace     " "
Ident          "test"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: block attribute @@index 1`] = `
"DoubleAt       "@@"
Ident          "index"
LParen         "("
LBracket       "["
Ident          "userId"
RBracket       "]"
RParen         ")"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: comment followed by model 1`] = `
"Comment        "// config"
Newline        "\\n"
Ident          "model"
Whitespace     " "
Ident          "C"
Whitespace     " "
LBrace         "{"
RBrace         "}"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: hyphenated attribute namespace 1`] = `
"At             "@"
Ident          "my-pack"
Dot            "."
Ident          "column"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: model with fields and attributes 1`] = `
"Ident          "model"
Whitespace     " "
Ident          "User"
Whitespace     " "
LBrace         "{"
Newline        "\\n"
Whitespace     "  "
Ident          "id"
Whitespace     " "
Ident          "Int"
Whitespace     " "
At             "@"
Ident          "id"
Newline        "\\n"
RBrace         "}"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: namespaced attribute with dot 1`] = `
"At             "@"
Ident          "extension"
Dot            "."
Ident          "VarChar"
LParen         "("
NumberLiteral  "191"
RParen         ")"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: optional and array types 1`] = `
"Ident          "role"
Whitespace     " "
Ident          "Role"
Question       "?"
Newline        "\\n"
Ident          "posts"
Whitespace     " "
Ident          "Post"
LBracket       "["
RBracket       "]"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: string default value 1`] = `
"At             "@"
Ident          "default"
LParen         "("
StringLiteral  "\\"unknown\\""
RParen         ")"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: types block with equals 1`] = `
"Ident          "Email"
Whitespace     " "
Equals         "="
Whitespace     " "
Ident          "String"
Eof            """
`;

exports[`Tokenizer > PSL fragments > snapshot: unicode identifiers 1`] = `
"Ident          "café"
Whitespace     " "
Ident          "Ñame"
Whitespace     " "
Ident          "名前"
Eof            """
`;

exports[`Tokenizer > fixture: realistic schema > token output matches snapshot 1`] = `
"Comment        "// use prisma-next"
Newline        "\\n"
Newline        "\\n"
Ident          "types"
Whitespace     " "
LBrace         "{"
Newline        "\\n"
Whitespace     "  "
Ident          "Email"
Whitespace     " "
Equals         "="
Whitespace     " "
Ident          "String"
Newline        "\\n"
RBrace         "}"
Newline        "\\n"
Newline        "\\n"
Ident          "enum"
Whitespace     " "
Ident          "Role"
Whitespace     " "
LBrace         "{"
Newline        "\\n"
Whitespace     "  "
Ident          "USER"
Newline        "\\n"
Whitespace     "  "
Ident          "ADMIN"
Newline        "\\n"
RBrace         "}"
Newline        "\\n"
Newline        "\\n"
Ident          "model"
Whitespace     " "
Ident          "User"
Whitespace     " "
LBrace         "{"
Newline        "\\n"
Whitespace     "  "
Ident          "id"
Whitespace     " "
Ident          "Int"
Whitespace     " "
At             "@"
Ident          "id"
Whitespace     " "
At             "@"
Ident          "default"
LParen         "("
Ident          "autoincrement"
LParen         "("
RParen         ")"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
Ident          "email"
Whitespace     " "
Ident          "Email"
Whitespace     " "
At             "@"
Ident          "unique"
Newline        "\\n"
Whitespace     "  "
Ident          "role"
Whitespace     " "
Ident          "Role"
Newline        "\\n"
Whitespace     "  "
Ident          "createdAt"
Whitespace     " "
Ident          "DateTime"
Whitespace     " "
At             "@"
Ident          "default"
LParen         "("
Ident          "now"
LParen         "("
RParen         ")"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
Ident          "isActive"
Whitespace     " "
Ident          "Boolean"
Whitespace     " "
At             "@"
Ident          "default"
LParen         "("
Ident          "true"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
Ident          "profile"
Whitespace     " "
Ident          "Json"
Question       "?"
Newline        "\\n"
RBrace         "}"
Newline        "\\n"
Newline        "\\n"
Ident          "model"
Whitespace     " "
Ident          "Post"
Whitespace     " "
LBrace         "{"
Newline        "\\n"
Whitespace     "  "
Ident          "id"
Whitespace     " "
Ident          "Int"
Whitespace     " "
At             "@"
Ident          "id"
Whitespace     " "
At             "@"
Ident          "default"
LParen         "("
Ident          "autoincrement"
LParen         "("
RParen         ")"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
Ident          "userId"
Whitespace     " "
Ident          "Int"
Newline        "\\n"
Whitespace     "  "
Ident          "title"
Whitespace     " "
Ident          "String"
Newline        "\\n"
Whitespace     "  "
Ident          "rating"
Whitespace     " "
Ident          "Float"
Question       "?"
Newline        "\\n"
Whitespace     "  "
Ident          "author"
Whitespace     " "
Ident          "User"
Whitespace     " "
At             "@"
Ident          "relation"
LParen         "("
Ident          "fields"
Colon          ":"
Whitespace     " "
LBracket       "["
Ident          "userId"
RBracket       "]"
Comma          ","
Whitespace     " "
Ident          "references"
Colon          ":"
Whitespace     " "
LBracket       "["
Ident          "id"
RBracket       "]"
Comma          ","
Whitespace     " "
Ident          "onDelete"
Colon          ":"
Whitespace     " "
Ident          "Cascade"
Comma          ","
Whitespace     " "
Ident          "onUpdate"
Colon          ":"
Whitespace     " "
Ident          "Cascade"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
DoubleAt       "@@"
Ident          "index"
LParen         "("
LBracket       "["
Ident          "userId"
RBracket       "]"
RParen         ")"
Newline        "\\n"
Whitespace     "  "
DoubleAt       "@@"
Ident          "unique"
LParen         "("
LBracket       "["
Ident          "title"
Comma          ","
Whitespace     " "
Ident          "userId"
RBracket       "]"
RParen         ")"
Newline        "\\n"
RBrace         "}"
Newline        "\\n"
Eof            """
`;
